--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^11.0.1",
     "framer-motion": "^11.11.7",
     "lucide-react": "^0.445.0",
+    "mongoose": "^8.8.1",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
