--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "firebase": "^11.0.1",
     "framer-motion": "^11.11.7",
     "lucide-react": "^0.445.0",
@@ -30,7 +31,9 @@
     "react-dom": "^18.3.1",
     "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.3.0",
+    "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.26.2",
+    "react-swipeable": "^7.0.2",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
@@ -40,6 +43,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-lazyload": "^3.2.3",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
